# chatgpt-discord-portal

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  avatar.py  chatgpt.py  docker-compose.yml  main.py  pyproject.toml  sample.env
.github/workflows/: docker.yml
portal/: __main__.py  avatar.py  bot.py  chatgpt.py
