[project]
name = "chatgpt-discord-portal"
description = ""
authors = [
    {name = "LeoVerto", email = "LeoVerto@users.noreply.github.com"},
]
dynamic = ["version"]
dependencies = [
    "discord-py>=2.2.2",
    "aiohttp>=3.8.4",
    "openai>=0.27.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.scripts]
start.cmd = "python -m portal"
start.env_file = ".env"
start-dev.cmd = "python -m portal"
start-dev.env_file = ".env_dev"
